added textbook and making progress on the universal-algebraic lattice of an order-theoretic one. this direction could be slow - auto spits out a hairball that takes some detangling...

--- a/references.bib
+++ b/references.bib
@@ -178,6 +178,17 @@
   langid        = {hungarian},
 }
 
+@book{BurSan,
+  title         = {A Course in Universal Algebra},
+  author        = {Burris, Stanley and Sankappanavar, H.P.},
+  year          = {},
+  publisher     = {},
+  url           = {https://www.math.uwaterloo.ca/~snburris/htdocs/UALG/univ-algebra.pdf},
+  pagetotal     = 315,
+  langid        = {english},
+  keywords      = {Mathematics - Universal Algebra},
+}
+
 @inproceedings{BvDR18,
   title         = {Higher {{Groups}} in {{Homotopy Type Theory}}},
   author        = {Buchholtz, Ulrik and van Doorn, Floris and Rijke, Egbert},
